# ChangeLog for genkernel
# Copyright 2006-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> gen_initrd.sh,
  generic/linuxrc, genkernel:
  Added patches from François-Xavier Roure <fx_roure@yahoo.fr> from bug
  #149020. This will end up being genkernel 3.4.6, most likely.

  14 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> gen_compile.sh:
  Adjust selinux stuff in gen_compile.sh to actually do what we intended, not
  the opposite.

  14 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> gen_compile.sh:
  Since device-mapper tries to build with selinux by default, we've removed
  it, then commented out the selinux support. The ebuild will need to
  enable/disable selinux support based on the selinux USE flag. This should
  resolve bug #157538.

  13 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  More fixes for similarly-named modules.

  13 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> alpha/busy-config,
  ia64/busy-config, parisc/busy-config, parisc64/busy-config,
  ppc/busy-config, ppc64/busy-config, sparc/busy-config,
  sparc64/busy-config, x86/busy-config, x86_64/busy-config,
  xen0/busy-config, xenU/busy-config:
  Disabled full SuSv3 compliant sort, as suggested by Aurélien Francillon
  <aurelien.francillon@inrialpes.fr> in bug #157777.

  13 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> generic/modprobe:
  Added a fix for similarly-named modules from bug #158017.

  13 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> gen_compile.sh:
  Fixed up linking for dmraid for bug #157538.

  13 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> alpha/busy-config,
  ia64/busy-config, parisc/busy-config, parisc64/busy-config,
  ppc/busy-config, ppc64/busy-config, sparc/busy-config,
  sparc64/busy-config, x86/busy-config, x86_64/busy-config,
  xen0/busy-config, xenU/busy-config:
  Updated busy-config to work with root=LABEL=<label> for bug #156640.
