@@ -172,7 +172,7 @@ CONFIG_SORT=y
 CONFIG_FEATURE_SORT_BIG=y
 # CONFIG_STAT is not set
 # CONFIG_FEATURE_STAT_FORMAT is not set
-# CONFIG_STTY is not set
+CONFIG_STTY=y
 # CONFIG_SUM is not set
 CONFIG_SYNC=y
 CONFIG_TAIL=y
