@@ -172,7 +172,7 @@ CONFIG_SORT=y
 # CONFIG_FEATURE_SORT_BIG is not set
 # CONFIG_STAT is not set
 # CONFIG_FEATURE_STAT_FORMAT is not set
-# CONFIG_STTY is not set
+CONFIG_STTY=y
 # CONFIG_SUM is not set
 CONFIG_SYNC=y
 CONFIG_TAIL=y
@@ -385,11 +385,11 @@ CONFIG_FEATURE_USE_TERMIOS=y
 CONFIG_MOUNT=y
 CONFIG_FEATURE_MOUNT_NFS=y
 CONFIG_PIVOT_ROOT=y
+CONFIG_SWITCH_ROOT=y
 CONFIG_RDATE=y
 # CONFIG_READPROFILE is not set
 # CONFIG_SETARCH is not set
 CONFIG_SWAPONOFF=y
-# CONFIG_SWITCH_ROOT is not set
 CONFIG_UMOUNT=y
 # CONFIG_FEATURE_UMOUNT_ALL is not set
 
