@@ -115,7 +115,7 @@ CONFIG_SLEEP=y
 CONFIG_SORT=y
 # CONFIG_FEATURE_SORT_REVERSE is not set
 # CONFIG_FEATURE_SORT_UNIQUE is not set
-# CONFIG_STTY is not set
+CONFIG_STTY=y
 CONFIG_SYNC=y
 CONFIG_TAIL=y
 # CONFIG_FEATURE_FANCY_TAIL is not set
@@ -379,6 +379,7 @@ CONFIG_MDSTART=y
 CONFIG_MORE=y
 CONFIG_FEATURE_USE_TERMIOS=y
 CONFIG_PIVOT_ROOT=y
+CONFIG_SWITCH_ROOT=y
 CONFIG_RDATE=y
 CONFIG_SWAPONOFF=y
 CONFIG_MOUNT=y
